--- a/Project/styles.css
+++ b/Project/styles.css
@@ -81,3 +81,73 @@ main ul li{
     transparent 40%
   );
 }
+
+main ul li:hover{
+  transform: scale(1.2, 1.2);
+  text-shadow: 5px 5px 10px gray;
+}
+
+footer a{
+  color: white;
+  text-decoration: none;
+  font-size: larger;
+}
+
+footer a:hover{
+  text-decoration: underline;
+}
+
+footer hr{
+  height: 1px;
+  background-color: rgb(61, 59, 59);
+  border: none;
+}
+
+footer div{
+  margin: 20px;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-around;
+  align-items: center;
+  gap: 50px;
+}
+
+footer h1{
+  font-size: xx-large;
+}
+
+footer p{
+  font-size: larger;
+  white-space: nowrap;
+}
+
+
+footer div section{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  gap: 20px;
+}
+
+footer div section section{
+  display: flex;
+  flex-direction: row;
+  gap: 40px;
+}
+
+footer div section section img{
+  height: 50px;
+  width: 50px;
+}
+
+#instagram{
+  
+}
+
+#github{
+
+}
+
+#linkedin{
+}
